Changes
=======

Next release
------------

- ``deform.Set`` type deprecated in favor of use of ``colander.Set``.

- Give the preview_url method of the tempstore access to the stored
  item. [tomster]

- Add ``style`` attribute/arguments to textinput-related widgets allowing you
  to set the style of the tag by hand.

- Fixed remove bug in nested sequences.  See
  https://github.com/Pylons/deform/pull/89

- Fixed bug wherein items added to a sequence nor the initial items rendered
  in a sequence would not reflect the correct defaults of the item widget.
  See https://github.com/Pylons/deform/pull/79

- Allow SelectWidget to produce <optgroup> HTML tags.  See
  https://github.com/Pylons/deform/pull/87

- Allow ``deform.form.Form`` constructor to accept an ``autocomplete``
  keyword argument, which controls the ``autocomplete`` attribute of the form
  tag.

- Allow ``deform.widget.SequenceWidget`` constructor to accept an ``orderable``
  keyword argument.  Default is ``False``.  If ``True``, allow drag-and-drop
  reordering of SequenceWidget items (via jQuery UI Sortable).

- ``deform.field.Field`` now has a ``__contains__`` method, which returns
  ``True`` if the named field is a subfield of the field on which it is
  called.

- ``deform.field.Field`` now has a ``validate_pstruct`` method which works
  like ``validate`` except it accepts a pstruct directly instead of accepting
  a list of controls.

- ``deform.field.Field.validate`` now accepts a ``subcontrol`` argument for
  validating a submapping of a form.

- Deform now depends on Colander >= 0.9.9dev (previously it depended on >=
  0.8).  It requires Colander 0.9.9's newer ``cstruct_children`` and
  ``appstruct_children`` methods of schema objects as well as being able to
  import objects from Colander that don't exist in earlier versions.

- Deform now depends on Chameleon >= 2.5.1 (previously it depended on
  >= 1.2.3).  It requires the Markup class supplied by this version or better.
